--- a/cybria/src/app/app.component.html
+++ b/cybria/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+<div>
+    <app-nav-bar (sideNavToggled) = "sideNavStatus = $event;"></app-nav-bar>
+
+    <main>
+        <app-side-panel [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-panel-open': sideNavStatus}"></app-side-panel>
+
+        <div class="display-area" [ngClass]="{'display-area-shrink': sideNavStatus}">
+            <p>Main Display Area</p>
+        </div>
+    </main>
+
+    <router-outlet></router-outlet>
+</div>
